--- a/StoreUI/StoreUI.csproj
+++ b/StoreUI/StoreUI.csproj
@@ -2,9 +2,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\StoreModels\StoreModels.csproj" />
+    <ProjectReference Include="..\StoreBL\StoreBL.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
